[DevTools] Add fetch support for XHR breakpoints

BUG=614740
R=dgozman@chromium.org

Review-Url: https://codereview.chromium.org/2012873002
Cr-Commit-Position: refs/heads/master@{#396088}

Former-commit-id: 3cc776e8e1116741baba2f3754e99bfaf4e1c1dd